--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-streamlit==1.37.1
-pandas==2.2.2
-pyarrow>=10.0.1
+# Minimal, 3.13-compatible deps for Streamlit app
+streamlit>=1.37,<1.39
+pandas>=2.2,<2.3
+pyarrow>=14
